Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22190

After IMPORT: InnoDB: Record 126 is above rec heap top 120

    XMLWordPrintable

Details

    Description

      We started to get a new type of failures in a test on 10.5:

      10.5 ccc06931c3c7be094f6dcddeb45589f06cf0c8af

      CURRENT_TEST: encryption.innodb_encryption_discard_import
      mysqltest: At line 154: query 'DROP TABLE t1, t2, t3' failed: 2013: Lost connection to MySQL server during query
      Version: '10.5.3-MariaDB-debug-log'  socket: '/dev/shm/var/tmp/1/mysqld.1.sock'  port: 16000  Source distribution
      2020-04-08  4:52:36 0 [ERROR] InnoDB: Record 126 is above rec heap top 120
      2020-04-08  4:52:36 0 [Note] InnoDB: Uncompressed page, stored checksum in field1 1586335936, calculated checksums for field1: crc32 3521116018, innodb 2228745977,  page type 17855 == INDEX.none 3735928559, stored checksum in field2 15335816, calculated checksums for field2: crc32 3521116018, innodb 11584688, none 3735928559,  page LSN 0 15335816, low 4 bytes of LSN at page end 2171006708, page number (if stored to page already) 6, space id (if created with >= MySQL-4.1.1 and stored already) 8
      2020-04-08  4:52:36 0 [Note] InnoDB: Page may be an index page where index id is 28
      2020-04-08  4:52:36 0 [Note] InnoDB: Index 28 is `PRIMARY` in table `test`.`t1`
      2020-04-08  4:52:36 0 [ERROR] [FATAL] InnoDB: Apparent corruption of an index page [page id: space=8, page number=6] to be written to data file. We intentionally crash the server to prevent corrupt data from ending up in data files.
      200408  4:52:36 [ERROR] mysqld got signal 6 ;
      

      Similar to MDEV-21549, this might be an old bug that became more reproducible in 10.5 thanks to improved write performance.
      The first failure of this kind on the cross-reference was for a bb-10.5-release that was based on 10.5 fad47df9957d754bec12d4d327c77ae04f71d903. The first failure directly on 10.5 was on dec14dcffe08c0284daac4f93cd750956b15ca47. All these failures occur on kvm-asan only, so it looks somewhat timing-sensitive.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: